# Data-Analysis-Agent-main-

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  testapi.py
src/agents/: _common.py  base.py  code_reviewer_agent.py  code_writer_agent.py  column_mapper_agent.py  note_agent.py  planner_agent.py  quality_review_agent.py  report_writer_agent.py  router_agent.py  router_mapper_agent.py  stats_params_agent.py  utils.py
src/app/: config.py  errors.py  logging.py  ui.py  ui2.py
src/db/: connection.py  importer.py  models.py  profiler.py  repository.py  schema.sql
src/execution/: kernel.py
src/prompts/: analyst.md  code_reviewer.md  code_writer.md  column_mapper.md  note.md  planner.md  quality_review.md  report_writer.md  router.md  router_mapper.md  stats_params.md  visualizer.md
src/tools/: political.py  stats.py  viz.py
src/workflows/: graph.py  state.py
